language/move-lang/tests/move_check/translated_ir_tests/move/commands/join_failure.exp
error[E06002]: use of unassigned variable
   ┌─ tests/move_check/translated_ir_tests/move/commands/join_failure.move:13:21
   │
 8 │             R{ f } = move r;
   │                      ------ The variable might not have a value due to this position. The variable must be assigned a value before being used
   ·
13 │         R{ f: _ } = move r;
   │                     ^^^^^^ Invalid usage of variable 'r'

